gen/grammers/flaskParser.java
// Generated from C:/Users/Heba2005/OneDrive/سطح المكتب/compiler2/grammers/flaskParser.g4 by ANTLR 4.13.2
package grammers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class flaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, LPAREN=3, RPAREN=4, LBRACE=5, RBRACE=6, LBRACK=7, 
		RBRACK=8, NEWLINE=9, DEF=10, RETURN=11, IF=12, ELSE=13, ELIF=14, FOR=15, 
		IN=16, IMPORT=17, FROM=18, AS=19, TRUE=20, FALSE=21, NONE=22, PLUS=23, 
		MINUS=24, MULT=25, DIV=26, EQ=27, ASSIGN=28, NEQ=29, LT=30, GT=31, LE=32, 
		GE=33, COMMA=34, COLON=35, DOT=36, AT=37, NUMBER=38, STRING=39, ID=40, 
		WS=41, HASH_COMMENT=42;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simple_stmt = 2, RULE_stmt_end = 3, 
		RULE_compound_stmt = 4, RULE_importStmt = 5, RULE_importList = 6, RULE_importItem = 7, 
		RULE_functionDef = 8, RULE_decorator = 9, RULE_paramList = 10, RULE_block = 11, 
		RULE_ifStmt = 12, RULE_forStmt = 13, RULE_assignStmt = 14, RULE_returnStmt = 15, 
		RULE_exprStmt = 16, RULE_expression = 17, RULE_comparison = 18, RULE_arith_expr = 19, 
		RULE_term = 20, RULE_factor = 21, RULE_primary = 22, RULE_trailer = 23, 
		RULE_argumentList = 24, RULE_argument = 25, RULE_ign = 26, RULE_listLiteral = 27, 
		RULE_dictLiteral = 28, RULE_dictEntry = 29, RULE_dotted_name = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simple_stmt", "stmt_end", "compound_stmt", "importStmt", 
			"importList", "importItem", "functionDef", "decorator", "paramList", 
			"block", "ifStmt", "forStmt", "assignStmt", "returnStmt", "exprStmt", 
			"expression", "comparison", "arith_expr", "term", "factor", "primary", 
			"trailer", "argumentList", "argument", "ign", "listLiteral", "dictLiteral", 
			"dictEntry", "dotted_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", null, "'def'", 
			"'return'", "'if'", "'else'", "'elif'", "'for'", "'in'", "'import'", 
			"'from'", "'as'", "'True'", "'False'", "'None'", "'+'", "'-'", "'*'", 
			"'/'", "'=='", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "','", "':'", 
			"'.'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "NEWLINE", "DEF", "RETURN", "IF", "ELSE", "ELIF", "FOR", "IN", 
			"IMPORT", "FROM", "AS", "TRUE", "FALSE", "NONE", "PLUS", "MINUS", "MULT", 
			"DIV", "EQ", "ASSIGN", "NEQ", "LT", "GT", "LE", "GE", "COMMA", "COLON", 
			"DOT", "AT", "NUMBER", "STRING", "ID", "WS", "HASH_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "flaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public flaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramLabelContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(flaskParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(flaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(flaskParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramLabelContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterProgramLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitProgramLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitProgramLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2061592075944L) != 0)) {
				{
				setState(64);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(62);
					match(NEWLINE);
					}
					break;
				case LPAREN:
				case LBRACE:
				case LBRACK:
				case DEF:
				case RETURN:
				case IF:
				case FOR:
				case IMPORT:
				case FROM:
				case TRUE:
				case FALSE:
				case NONE:
				case AT:
				case NUMBER:
				case STRING:
				case ID:
					{
					setState(63);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementSimpleLabelContext extends StatementContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public StatementSimpleLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterStatementSimpleLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitStatementSimpleLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitStatementSimpleLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementCompoundLabelContext extends StatementContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StatementCompoundLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterStatementCompoundLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitStatementCompoundLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitStatementCompoundLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
			case LBRACE:
			case LBRACK:
			case RETURN:
			case IMPORT:
			case FROM:
			case TRUE:
			case FALSE:
			case NONE:
			case NUMBER:
			case STRING:
			case ID:
				_localctx = new StatementSimpleLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				simple_stmt();
				}
				break;
			case DEF:
			case IF:
			case FOR:
			case AT:
				_localctx = new StatementCompoundLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
	 
		public Simple_stmtContext() { }
		public void copyFrom(Simple_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleReturnLabelContext extends Simple_stmtContext {
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public Stmt_endContext stmt_end() {
			return getRuleContext(Stmt_endContext.class,0);
		}
		public SimpleReturnLabelContext(Simple_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterSimpleReturnLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitSimpleReturnLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitSimpleReturnLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleExprLabelContext extends Simple_stmtContext {
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public Stmt_endContext stmt_end() {
			return getRuleContext(Stmt_endContext.class,0);
		}
		public SimpleExprLabelContext(Simple_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterSimpleExprLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitSimpleExprLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitSimpleExprLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleAssignLabelContext extends Simple_stmtContext {
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public Stmt_endContext stmt_end() {
			return getRuleContext(Stmt_endContext.class,0);
		}
		public SimpleAssignLabelContext(Simple_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterSimpleAssignLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitSimpleAssignLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitSimpleAssignLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleImportLabelContext extends Simple_stmtContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public Stmt_endContext stmt_end() {
			return getRuleContext(Stmt_endContext.class,0);
		}
		public SimpleImportLabelContext(Simple_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterSimpleImportLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitSimpleImportLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitSimpleImportLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new SimpleImportLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				importStmt();
				setState(76);
				stmt_end();
				}
				break;
			case 2:
				_localctx = new SimpleAssignLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				assignStmt();
				setState(79);
				stmt_end();
				}
				break;
			case 3:
				_localctx = new SimpleReturnLabelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				returnStmt();
				setState(82);
				stmt_end();
				}
				break;
			case 4:
				_localctx = new SimpleExprLabelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				exprStmt();
				setState(85);
				stmt_end();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stmt_endContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(flaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(flaskParser.NEWLINE, i);
		}
		public TerminalNode EOF() { return getToken(flaskParser.EOF, 0); }
		public Stmt_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterStmt_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitStmt_end(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitStmt_end(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_endContext stmt_end() throws RecognitionException {
		Stmt_endContext _localctx = new Stmt_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt_end);
		try {
			int _alt;
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEWLINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(90); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(89);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(92); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_stmtContext extends ParserRuleContext {
		public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_stmt; }
	 
		public Compound_stmtContext() { }
		public void copyFrom(Compound_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundFunctionLabelContext extends Compound_stmtContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public CompoundFunctionLabelContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterCompoundFunctionLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitCompoundFunctionLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitCompoundFunctionLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundIfLabelContext extends Compound_stmtContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public CompoundIfLabelContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterCompoundIfLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitCompoundIfLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitCompoundIfLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundForLabelContext extends Compound_stmtContext {
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public CompoundForLabelContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterCompoundForLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitCompoundForLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitCompoundForLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compound_stmtContext compound_stmt() throws RecognitionException {
		Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compound_stmt);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case AT:
				_localctx = new CompoundFunctionLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				functionDef();
				}
				break;
			case IF:
				_localctx = new CompoundIfLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				ifStmt();
				}
				break;
			case FOR:
				_localctx = new CompoundForLabelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				forStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
	 
		public ImportStmtContext() { }
		public void copyFrom(ImportStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportSimpleLabelContext extends ImportStmtContext {
		public TerminalNode IMPORT() { return getToken(flaskParser.IMPORT, 0); }
		public Dotted_nameContext dotted_name() {
			return getRuleContext(Dotted_nameContext.class,0);
		}
		public ImportSimpleLabelContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterImportSimpleLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitImportSimpleLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitImportSimpleLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportFromLabelContext extends ImportStmtContext {
		public TerminalNode FROM() { return getToken(flaskParser.FROM, 0); }
		public Dotted_nameContext dotted_name() {
			return getRuleContext(Dotted_nameContext.class,0);
		}
		public TerminalNode IMPORT() { return getToken(flaskParser.IMPORT, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public ImportFromLabelContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).enterImportFromLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flaskParserListener ) ((flaskParserListener)listener).exitImportFromLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flaskParserVisitor ) return ((flaskParserVisitor<? extends T>)visitor).visitImportFromLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importStmt);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				_localctx = new ImportFromLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(FROM);
				setState(103);
				dotted_name();
				setState(104);
				match(IMPORT);
				setState(105);
				importList();
				}
				break;
			case IMPORT:
				_localctx = new ImportSimpleLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(IMPORT);
				setState(108);
				dotted_name();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
